# PhotoShare-Python-front

./: app.py  pyproject.toml  requirements.txt
static/: base.css  script.js  style.css
templates/: Timeout.html  Unauthorized.html  access_denied.html  base.html  comments.html  contact.html  contacts.html  edit_contact.html  edit_user.html  email_not_confirmed.html  login.html  login_failure.html  login_success.html  logout.html  only_admin.html  only_moderator.html  photo.html  photo2.html  photo4.html  photos.html  photos2.html  registration_failure.html  registration_success.html  signup.html  suspicious_activity.html  time_out.html  update_avatar.html  upload_avatar_success.html  upload_photo.html  upload_success.html  user.html  user_banned.html  users.html  users2.html
