[tool.poetry]
name = "photoshare-python-front"
version = "0.1.0"
description = ""
authors = ["Gennadiy Shpak <gena_shpak@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
starlette = "^0.37.2"
itsdangerous = "^2.2.0"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
